# ChangeLog for app-portage/squashed-portage
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squashed-portage-0.10 (21 Jan 2014)

  21 Jan 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.10.ebuild:
  Version Bump

  17 Nov 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Use non shallow clones

  17 Nov 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Move default storage dir to /var/cache/sqfs-portage

  26 Oct 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Always show postinst message

*squashed-portage-0.9 (26 Oct 2013)

  26 Oct 2013; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.9.ebuild:
  Version Bump

  14 Aug 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Split config files

  11 Aug 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild,
  metadata.xml:
  Add systemD support

  03 Jul 2013; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.6.ebuild,
  -squashed-portage-0.7.ebuild:
  Drop old

  25 May 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-0.8.ebuild:
  Keyword ~arm

  25 May 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-0.8.ebuild:
  Keyword ~arm

*squashed-portage-0.8 (20 May 2013)

  20 May 2013; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.8.ebuild,
  squashed-portage-9999.ebuild, metadata.xml:
  Version Bump

  19 May 2013; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Add new deps and move to python-single-r1

  19 Dec 2012; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.3.ebuild,
  -squashed-portage-0.5.ebuild, squashed-portage-0.6.ebuild, metadata.xml:
  Drop unnecessary die

  19 Dec 2012; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.3.ebuild,
  -squashed-portage-0.5.ebuild, metadata.xml:
  Drop old

*squashed-portage-0.4 (13 Aug 2012)

  13 Aug 2012; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.4.ebuild,
  metadata.xml: