@@ -1,3 +1,3 @@
-DIST squashed-portage-0.10.tar.xz 5488 SHA256 81622a6ec85fb32885a3c2781e8047ebac8f738e5db7e8e52b5d6f5c5e8fb68c SHA512 4988ce25ebcc33c177263668660ee124c15b84724503602cbfb8d7a11f2147201d86510c306bc54a334af12ff055f855ca566fb6ae284c6f5b55903ac8cdc771 WHIRLPOOL 9ff9b643c770dad8a103a917fe86a310fffda871f88924b3586979066dbf658d7db35519e475110a0f27cb6fa3cbf2912cb93a1d219f1bc6dbe581afebe7115d
+DIST squashed-portage-0.11.tar.xz 5544 SHA256 0ffa37d22da440629aef8f321155f9ae8b8241dd7b39c47e41fd1c273d6a476d SHA512 193358db80e5ebfa81e777f81df8da4bb4839549e7b93dcccc731687346e899dfe15af62855d327c0abba9b3f3d6da8cf978abbc5291be9c8733b538858ff518 WHIRLPOOL 2f23999096bf0b730a00d4526ccd69a9953e16886cdaabe59e8f849a332b5e69e2a3470467e30fdbcbdf19c2813f76b76a86495d10030c98dad41552dffb5752
 DIST squashed-portage-0.8.tar.xz 4620 SHA256 0d5f0193070610fcfdea903b64563480cb7fc5dd8811e3c5d49952c5e8213f1c SHA512 6a0e9fcc8cb2e823cad20303e265032b527d1c06ce59df10df2db7bff19e05b76d4e54d7fef8fcac8101ca5b24038d235278ae8980e65cce6bce86a35dec7271 WHIRLPOOL 161f83e943b6ce1544b9733b24179c48fefbbf8a75f564d6a842246dce1cf03bbd6dbca71604ffc469d13cbdf71beb1a2dad622cfb0b4b98e0951a440bb1481a
 DIST squashed-portage-0.9.tar.xz 5452 SHA256 2e0e0acfe8e30e6a0eabe229159f0a27ee3f7a45b989153db0c99292d696b3f8 SHA512 bfd17b0756b5e64d1c193934e6909db11c42a7c89cc206bd4a33e0653c9b96ce3f190c2fd597b5958cf784ee2c19de7b80a9a892511d7c25d3364f5540ce6cc7 WHIRLPOOL 9de6d6c5526f4147c9ffdf70057ef571181a78b91488161d324fc4d6f211dd90d6724fee8dbd42173b33e0ccf14512dfbd739dcd7ae1f0d9343f381a86913421
