@@ -1,4 +1,4 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -40,9 +40,6 @@ src_prepare() {
 }
 
 src_install() {
-	dodir /var/cache/sqfs-portage
-	keepdir /var/cache/sqfs-portage
-
 	dobin get-squashed-portage
 
 	python_scriptinto /usr/libexec/${PN}/
