@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jan 2014; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.10.ebuild,
+  +squashed-portage-0.11.ebuild, squashed-portage-9999.ebuild:
+  Version bump, drop cachedir into runtime
+
 *squashed-portage-0.10 (21 Jan 2014)
 
   21 Jan 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.10.ebuild:
